# wa-cli

./: Cargo.toml  LICENSE  README.md  install  requirements.txt  wa.py
src/: main.rs
