[package]
name = "wa-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sixel-image = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
image = "0.25"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
clap = { version = "4.5", features = ["derive"] }
